--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,35 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield; /* For Firefox */
 }
+
+.welcome-name-block{
+  position: absolute;
+  top: 35%;
+  left: 5%;
+}
+
+.welcome-name-block h1{
+  font-size: 55px;
+  color: white;
+  line-height: 55px;
+  margin-bottom: 8px;
+}
+.welcome-name-block p {
+  color: rgba(255, 255, 255, .6);
+}
+.guest-layout-background{
+  background-image: linear-gradient(45deg, rgba(0,0,0,.3), rgba(0,0,0,.3)) ,url("/images/background.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100svh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
