--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -97,3 +97,28 @@ input[type="number"] {
 .glassMo b {
   padding: 8px;
 }
+
+.adminPhysicalPaymentContainer{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 600px) {
+  .adminPhysicalPaymentContainer {
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+  }
+}
+
+.inventoryQuantity{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  background-color: rgb(190, 243, 190);
+  width: 30px;
+  border-radius: 1px;
+  text-align: center;
+  font-weight: bold;
+}
