--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -46,7 +46,7 @@ input[type="number"] {
 }
 
 .inside-layout-background{
-  background-image: linear-gradient(45deg, rgba(0,0,0,.7), rgba(0,0,0,.7)) ,url("/images/background.jpg");
+  background-image: linear-gradient(45deg, rgba(185, 185, 185, 0.7), rgba(185, 185, 185, 0.7)) ,url("/images/background.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -116,7 +116,8 @@ input[type="number"] {
   top: 0;
   left: 0;
   z-index: 20;
-  background-color: rgb(190, 243, 190);
+  background-color: rgb(64, 64, 64);
+  color: whitesmoke;
   width: 30px;
   border-radius: 1px;
   text-align: center;
@@ -128,10 +129,8 @@ input[type="number"] {
 
 .table-container {
   opacity: 0;
-  transform: translateY(-20px); /* Start with the table slightly above */
   transition: opacity 0.5s ease, transform 0.5s ease; /* Smooth fade and slide */
-  max-height: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .table-container.show {
